test/lit/vpto/vadd_low_precision_verify_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto %s 2>&1 | FileCheck %s

// CHECK: error: 'pto.vadd' op lhs type must not use low-precision vector element type

module attributes {pto.target_arch = "a5"} {
  func.func @vadd_f8_invalid(%src0: !pto.ptr<f8E4M3FN, ub>, %src1: !pto.ptr<f8E4M3FN, ub>) {
    %c0 = arith.constant 0 : index
    pto.vecscope {
      %mask = pto.pset_b8 "PAT_ALL" : !pto.mask<b8>
      %lhs = pto.vlds %src0[%c0] : !pto.ptr<f8E4M3FN, ub> -> !pto.vreg<256xf8E4M3FN>
      %rhs = pto.vlds %src1[%c0] : !pto.ptr<f8E4M3FN, ub> -> !pto.vreg<256xf8E4M3FN>
      %sum = pto.vadd %lhs, %rhs, %mask : !pto.vreg<256xf8E4M3FN>, !pto.vreg<256xf8E4M3FN>, !pto.mask<b8> -> !pto.vreg<256xf8E4M3FN>
      %use = pto.vbitcast %sum : !pto.vreg<256xf8E4M3FN> -> !pto.vreg<64xf32>
    }
    return
  }
}
